<?xml version="1.0" encoding="UTF-8"?>
<!--
~ PowerAuth integration libraries for RESTful API applications, examples and
~ related software components
~
~ Copyright (C) 2018 Wultra s.r.o.
~
~ This program is free software: you can redistribute it and/or modify
~ it under the terms of the GNU Affero General Public License as published
~ by the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~
~ This program is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
~ GNU Affero General Public License for more details.
~
~ You should have received a copy of the GNU Affero General Public License
~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>powerauth-restful-integration-parent</name>
    <description>PowerAuth RESTful Integration Libraries</description>

    <groupId>io.getlime.security</groupId>
    <artifactId>powerauth-restful-integration-parent</artifactId>
    <version>1.5.0</version>
    <packaging>pom</packaging>

    <inceptionYear>2017</inceptionYear>
    <url>https://powerauth.com/</url>

    <organization>
        <name>Wultra s.r.o.</name>
        <url>https://wultra.com</url>
    </organization>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Petr Dvorak</name>
            <email>petr@wultra.com</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/wultra/powerauth-restful-integration.git</connection>
        <developerConnection>scm:git:https://github.com/wultra/powerauth-restful-integration.git</developerConnection>
        <url>https://github.com/wultra/powerauth-restful-integration</url>
    </scm>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/wultra/powerauth-restful-integration/issues</url>
    </issueManagement>

    <modules>
        <module>powerauth-restful-model</module>
        <module>powerauth-restful-security-spring</module>
        <module>powerauth-restful-security-spring-annotation</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
        <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
        <maven-javadoc-plugin.version>3.6.0</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
        <maven-war-plugin.version>3.4.0</maven-war-plugin.version>
        <spring-boot.version>3.1.3</spring-boot.version>
        <commons-text.version>1.10.0</commons-text.version>
        <bcprov.version>1.76</bcprov.version>
        <wultra-core.version>1.7.0</wultra-core.version>
        <powerauth.version>1.5.0</powerauth.version>
        <powerauth-crypto.version>1.5.1</powerauth-crypto.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- PowerAuth Restful Integration Dependencies -->
            <dependency>
                <groupId>io.getlime.security</groupId>
                <artifactId>powerauth-restful-model</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.getlime.security</groupId>
                <artifactId>powerauth-restful-security-spring-annotation</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.getlime.core</groupId>
                <artifactId>annotations</artifactId>
                <version>${wultra-core.version}</version>
            </dependency>

            <dependency>
                <groupId>io.getlime.core</groupId>
                <artifactId>rest-model-base</artifactId>
                <version>${wultra-core.version}</version>
            </dependency>

            <!-- 3rd Party Dependencies -->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bcprov.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${maven-war-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.kohsuke</groupId>
                        <artifactId>pgp-maven-plugin</artifactId>
                        <version>1.1</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>disable-java8-doclint</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <additionalparam>-Xdoclint:none</additionalparam>
            </properties>
        </profile>
        <profile>
            <id>internal-repository</id>
            <activation>
                <property>
                    <name>useInternalRepo</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
            </properties>
            <distributionManagement>
                <repository>
                    <id>jfrog-central</id>
                    <name>Wultra Artifactory-releases</name>
                    <url>https://wultra.jfrog.io/artifactory/internal-maven-repository</url>
                </repository>
                <snapshotRepository>
                    <id>jfrog-central</id>
                    <name>Wultra Artifactory-snapshots</name>
                    <url>https://wultra.jfrog.io/artifactory/internal-maven-repository</url>
                </snapshotRepository>
            </distributionManagement>
            <repositories>
                <repository>
                    <id>jfrog-central</id>
                    <name>Wultra Artifactory-releases</name>
                    <url>https://wultra.jfrog.io/artifactory/internal-maven-repository</url>
                </repository>
                <repository>
                    <id>ossrh-snapshots</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                    <releases>
                        <enabled>false</enabled>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                    </snapshots>
                </repository>
            </repositories>
        </profile>
        <profile>
            <id>public-repository</id>
            <activation>
                <property>
                    <name>!useInternalRepo</name>
                </property>
            </activation>
            <properties>
            </properties>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh-snapshots-distribution</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh-staging-distribution</id>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>ossrh-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
